fix 'overlap chat input box'

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -94,3 +94,10 @@ body.tab-bar-hidden {
 body:not(.footer-nav-ipad) .footer-nav {
   display: none;
 }
+
+
+//https://meta.discourse.org/t/discourse-tab-bar-for-mobile/75696/155
+.chat-composer__wrapper {
+  margin-bottom: 35px
+}
+
